# calcflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
calcflow/: __init__.py  __main__.py
calcflow/cli/: display.py  main.py  registry.py
calcflow/config/: settings.py
calcflow/core/: bader.py  freq_analyzer.py  job_submitter.py  neb.py  structure.py  vasp_runner.py  workspace.py
calcflow/data/presets/: bader.json  freq.json  single-point.json  sp-tight.json  tight.json
calcflow/data/templates/: sge.sh.j2
calcflow/handlers/: common.py  jobs.py  postproc.py  structure.py  utilities.py  workflows.py
calcflow/presets/: manager.py
calcflow/utils/: fs.py  logging.py  prompts.py
tests/: test_freq_analyzer.py  test_presets.py  test_registry.py
