[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calcflow"
version = "0.1.0"
description = "Interactive menu-driven CLI for VASP computational chemistry workflows"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "CalcFlow Contributors" },
]
keywords = ["vasp", "dft", "computational-chemistry", "cli", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pylint"]

[project.urls]
Homepage = "https://github.com/mappoh/calcflow"
Repository = "https://github.com/mappoh/calcflow"
Issues = "https://github.com/mappoh/calcflow/issues"

[project.scripts]
calcflow = "calcflow.cli.main:run"

[tool.setuptools.packages.find]
include = ["calcflow*"]

[tool.setuptools.package-data]
calcflow = ["data/presets/*.json", "data/templates/*.j2"]

[tool.ruff]
line-length = 100
